Finish basic html structure

--- a/index.html
+++ b/index.html
@@ -17,12 +17,31 @@
  <li><a>Recipes</a></li>
 </ul>
 
-<h1>This Is the Best Website Ever!</h1>
+<h2>This Is the Best Website Ever!</h2>
+
+<p>This Website will not only make your social and business life to be better than ever, but will also make you happy! Sign Up today</p>
+<button>Sign Up</button>
+<img src="img/Thumbs-Up.jpg" alt="A guy who supports this website" class="small">
 
 
 
 
+<h3>What will happen if you sign up:</h3>
 
+<img src="img/Stoplookingatmycode.jpg" alt="A succesful man" class="smaller">
+<img src="img/Wedding.jpg" alt="A happy man" class="smaller">
+<img src="img/nature.jpg" alt="A nature man" class="smaller">
+<img src="img/moneyy.jpg" alt="A wealthy man" class="smaller">
+
+<div class="quote">
+<em>"This website became the catalyst that reshaped the very fabric of my life, igniting a profound transformation within me"</em>
+-Abraham Lincon
+</div>
+
+
+<p>Cmon Sign up already</p>
+<p>Cmon men, do it, right now</p>
+<button>Sign up</button>
 </body>
 
 
