--- a/index.html
+++ b/index.html
@@ -5,37 +5,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Best site</title>
     <link rel="stylesheet" href="style.css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 </head>
 <body>
-    <div class="logo">
-<img src="img/transparent.png" alt="logo">
+ <div class="hero">
+    <div class="header">  
+        <div class="logo">
+        <img src="img/transparent.png" alt="logo">
+        </div> 
+    <ul>
+    <li><a>About</a></li>
+    <li><a>Github</a></li>
+    <li><a>Recipes</a></li>
+    </ul>
+    </div> 
+    <h2>This Is the Best Website Ever!</h2>
+
+    <p>This Website will not only make your social and business life to be better than ever, but will also make you happy! Sign Up today</p>
+    <button>Sign Up</button>
+    <img src="img/Thumbs-Up.jpg" alt="A guy who supports this website" class="small">
+
+
+
 </div>
+ <div class="between">
+    <h3>What will happen if you sign up:</h3>
 
-<ul>
- <li><a>About</a></li>
- <li><a>Github</a></li>
- <li><a>Recipes</a></li>
-</ul>
+    <img src="img/Stoplookingatmycode.jpg" alt="A succesful man" class="smaller">
+    <img src="img/Wedding.jpg" alt="A happy man" class="smaller">
+    <img src="img/nature.jpg" alt="A nature man" class="smaller">
+    <img src="img/moneyy.jpg" alt="A wealthy man" class="smaller">
 
-<h2>This Is the Best Website Ever!</h2>
-
-<p>This Website will not only make your social and business life to be better than ever, but will also make you happy! Sign Up today</p>
-<button>Sign Up</button>
-<img src="img/Thumbs-Up.jpg" alt="A guy who supports this website" class="small">
-
-
-
-
-<h3>What will happen if you sign up:</h3>
-
-<img src="img/Stoplookingatmycode.jpg" alt="A succesful man" class="smaller">
-<img src="img/Wedding.jpg" alt="A happy man" class="smaller">
-<img src="img/nature.jpg" alt="A nature man" class="smaller">
-<img src="img/moneyy.jpg" alt="A wealthy man" class="smaller">
-
-<div class="quote">
-<em>"This website became the catalyst that reshaped the very fabric of my life, igniting a profound transformation within me"</em>
--Abraham Lincon
+    <div class="quote">
+    <em>"This website became the catalyst that reshaped the very fabric of my life, igniting a profound transformation within me"</em>
+    -Abraham Lincon
+    </div>
 </div>
 
 
@@ -44,5 +48,7 @@
 <button>Sign up</button>
 </body>
 
-
+<div class="footer">
+    Copyright @ The Odin Project 2023
+</div>
 </html>
