Centered info and images

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
 
 </div>
  <div class="between">
-    <h3>What will happen if you sign up:</h3>
-
+    <div class ="info"><h3>What will happen if you sign up:</h3></div>
+    <div class="succes">
     <img src="img/Stoplookingatmycode.jpg" alt="A succesful man" class="smaller">
     <img src="img/Wedding.jpg" alt="A happy man" class="smaller">
     <img src="img/nature.jpg" alt="A nature man" class="smaller">
     <img src="img/moneyy.jpg" alt="A wealthy man" class="smaller">
-
-    <div class="quote">
-    <em>"This website became the catalyst that reshaped the very fabric of my life, igniting a profound transformation within me"</em>
+    </div>
+    <div class="abraham">
+    <em class="quote">"This website became the catalyst that reshaped the very fabric of my life, igniting a profound transformation within me"</em>
     -Abraham Lincon
     </div>
 </div>
