Make adjustment in header

--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
     <li><a>Recipes</a></li>
     </ul>
     </div> 
-    <h2>This Is the Best Website Ever!</h2>
-
-    <p>This Website will not only make your social and business life to be better than ever, but will also make you happy! Sign Up today</p>
-    <button>Sign Up</button>
-    <img src="img/Thumbs-Up.jpg" alt="A guy who supports this website" class="small">
-
-
-
+    <div class="thumb">
+        <div class="info-button">
+        <h2>This Is the Best Website Ever!</h2>
+    
+        <p class="desc">This Website will not only make your social and business life to be better than ever, but will also make you happy! Sign Up today</p>
+       <div class="button" ><button>Sign Up</button></div>
+    </div>
+        <img src="img/Thumbs-Up.jpg" alt="A guy who supports this website" class="small">
+        
+ </div>
 </div>
  <div class="between">
     <div class ="info"><h3>What will happen if you sign up:</h3></div>
