--- a/index.html
+++ b/index.html
@@ -33,16 +33,31 @@
  <div class="between">
     <div class ="info"><h3>What will happen if you sign up:</h3></div>
     <div class="succes">
-    <img src="img/Stoplookingatmycode.jpg" alt="A succesful man" class="smaller">
-    <img src="img/Wedding.jpg" alt="A happy man" class="smaller">
-    <img src="img/nature.jpg" alt="A nature man" class="smaller">
-    <img src="img/moneyy.jpg" alt="A wealthy man" class="smaller">
+        <div class="man">
+            <img src="img/Stoplookingatmycode.jpg" alt="A succesful man" class="smaller">
+            <div class="text">You will be succesful</div>
+        </div>
+        <div class="man">
+            <img src="img/Wedding.jpg" alt="A happy man" class="smaller">
+            <div class="text">You will be married</div>
+        </div>
+        <div class="man">
+            <img src="img/nature.jpg" alt="A nature man" class="smaller">
+            <div class="text">You will be Free</div>
+        </div>
+        <div class="man">
+            <img src="img/moneyy.jpg" alt="A wealthy man" class="smaller">
+            <div class="text">You will be rich</div>
+         </div>
     </div>
+   
+
+</div>
     <div class="abraham">
     <em class="quote">"This website became the catalyst that reshaped the very fabric of my life, igniting a profound transformation within me"</em>
     -Abraham Lincon
     </div>
-</div>
+
 
 
 <p>Cmon Sign up already</p>
