Finish quote, sorta

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
    
 
 </div>
-    <div class="abraham">
-    <em class="quote">"This website became the catalyst that reshaped the very fabric of my life, igniting a profound transformation within me"</em>
-    -Abraham Lincon
+    <div class="abraham-quote">
+   <div class="quote"> <em>"This website became the catalyst that reshaped the very fabric of my life, igniting a profound transformation within me"</em></div>
+    <div class="lincoln">-Abraham Lincon</div>
     </div>
 
 
