--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         </div> 
     <ul>
     <li><a>About</a></li>
-    <li><a>Github</a></li>
-    <li><a>Recipes</a></li>
+    <li><a href="https://github.com/WoodenBrick1/Odin-Landing-Page">Github</a></li>
+    <li><a href="https://woodenbrick1.github.io/odin-recipes/">Recipes</a></li>
     </ul>
     </div> 
     <div class="thumb">
