Finish the call button

--- a/index.html
+++ b/index.html
@@ -59,13 +59,17 @@
     </div>
 
 
-
-<p>Cmon Sign up already</p>
-<p>Cmon men, do it, right now</p>
+<div class="call">
+    <div> 
+    <p class="cmon">Cmon Sign up already!</p>
+    <p class="click">What are you waiting for, click it, right now</p>
+    </div>
 <button>Sign up</button>
-</body>
-
+</div>
 <div class="footer">
     Copyright @ The Odin Project 2023
 </div>
+</body>
+
+
 </html>
