--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
 <button>Sign up</button>
 </div>
 <div class="footer">
-    Copyright @ The Odin Project 2023
+    <p>Copyright</p>
+    <p>©</p>
+    <p>The Odin Project 2023</p>
 </div>
 </body>
 
